--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=Backend
 server.port = 8080
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://root:jJKxidMhSdYqviektuJwCRmmITKwhyIo@autorack.proxy.rlwy.net:10110/railway
+spring.datasource.url=jdbc:mysql://root:CbjXguiLKuMxSPqeSPLwOEQJkqcUnSlQ@junction.proxy.rlwy.net:56270/railway
 
 spring.datasource.username = root
-spring.datasource.password=jJKxidMhSdYqviektuJwCRmmITKwhyIo
+spring.datasource.password=CbjXguiLKuMxSPqeSPLwOEQJkqcUnSlQ
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
